# RubiksCubeSolver

./: README.md
RubiksCubePy/: RubiksCubeAI.ipynb  model.pth
RubiksCubeQT/: CMakeLists.txt  helper.cpp  helper.h  main.cpp  rubikscubeqt.pro  widget.cpp  widget.h  window.cpp
